[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/mainAntigo/MainGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/CPU/CPU.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/RAM/RAM.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Process/Process.tscn" type="PackedScene" id=4]

[node name="MainGame" type="Node"]
script = ExtResource( 1 )

[node name="CPU" parent="." instance=ExtResource( 2 )]
position = Vector2( 159, 187 )

[node name="Process" parent="." instance=ExtResource( 4 )]
position = Vector2( 156, 450 )
scale = Vector2( 2, 2 )

[node name="Clock" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="RAM" parent="." instance=ExtResource( 3 )]
position = Vector2( 503, 151 )

[connection signal="Connecting" from="CPU" to="." method="_on_CPU_Connecting"]
[connection signal="CancelConnect" from="Process" to="." method="_on_Process_CancelConnect"]
[connection signal="Connect" from="Process" to="." method="_on_Process_Connect"]
[connection signal="area_entered" from="Process" to="CPU" method="_on_Process_area_entered"]
[connection signal="timeout" from="Clock" to="." method="_on_Clock_timeout"]
